--- a/public/css/style.css
+++ b/public/css/style.css
@@ -622,6 +622,7 @@ main[role='main'] {
   -webkit-user-select: none;
   user-select: none; 
   position: absolute;
+  -webkit-transform: translateX(0) translateY(0);
   transform: translateX(0) translateY(0);
   transition:         all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
   -webkit-transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275); 
