--- a/public/css/style.css
+++ b/public/css/style.css
@@ -528,7 +528,7 @@ main[role='main'] {
 
 .cell {
   display: table-cell;
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
 
   transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
   -webkit-transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -545,8 +545,8 @@ main[role='main'] {
 } 
 
 .cell .hot-spot.expand_near {
-  transform: translateX(-18%) translateY(-5%) scale(0.6);
   -webkit-transform: translateX(-18%) translateY(-5%) scale(0.6);
+  transform: translateX(-18%) translateY(-5%) scale(0.6);
   -moz-transform: translateX(-18%) translateY(-5%) scale(0.6);
 }
 
@@ -622,8 +622,8 @@ main[role='main'] {
   -webkit-user-select: none;
   user-select: none; 
   position: absolute;
-  -webkit-transform: translateX(0) translateY(0);
-  transform: translateX(0) translateY(0);
+  /*-webkit-transform: translateX(0) translateY(0);
+  transform: translateX(0) translateY(0);*/
   transition:         all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
   -webkit-transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275); 
   -webkit-backface-visibility: hidden;
@@ -638,12 +638,13 @@ main[role='main'] {
   color: #c2c2c2;
   opacity: 0.2;
   text-align: center;
+
 }
 
 .innerItem.hot-spot {
   opacity: 1;
-  -webkit-transform: translateX(-5px) translateY(0);
-  transform: translateX(-5px) translateY(0);
+  /*-webkit-transform: translateX(-25px) translateY(-20px);*/
+  /*transform: translateX(-5px) translateY(0);*/
   width: 30px;
   height: 30px;
   border-radius: 50px;
@@ -658,19 +659,29 @@ main[role='main'] {
 }
 
 
+.innerItem.hot-spot {
+  -webkit-transform: translateX(-8px) translateY(-10px);
+}
+
+
 .innerItem.hot-spot.expand {
   border: 3px solid #00a8e8;
-  -webkit-transform: translateX(-37%) translateY(-35%);
   -moz-transform: translateX(-37%) translateY(-35%);
   transform: translateX(-37%) translateY(-35%);
+
+  transform-origin: 50% 0;
+  -webkit-transform-origin: 50% 0;
 }
+
 
 .innerItem.expand {
   opacity: 1;
   width: 75px;
   height: 75px;
-  -webkit-transform: translateX(-35%) translateY(-30%);
+  -webkit-transform: translateX(-25px) translateY(-20px);
   transform: translateX(-35%) translateY(-30%);
+  transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
 }
 
 div.gridContainer  {
@@ -679,6 +690,7 @@ div.gridContainer  {
     top: 100px;
     left: 50%;
     margin-right: -50%;
+    -webkit-transform: translate(-50%, 0);
     transform: translate(-50%, 0);
     -webkit-transform: translate(-50%, 0);
   }
