--- a/public/views/project-list.html
+++ b/public/views/project-list.html
@@ -2,7 +2,7 @@
 	<a ng-href="#/projects/{{projectInfo.id}}" class="project fx">						
 		<figure>
 			<figcaption>
-				<p class="ch0 fx">{{projectInfo.company}}</p>
+				<p class="ch0 fx">{{projectInfo.name}}</p>
 				<div class="fx-hover"></div>
 			</figcaption>
 			<img ng-src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/{{projectInfo.image}}" class="fx">
