Updated the final works list data/directives

--- a/public/views/project-detail.html
+++ b/public/views/project-detail.html
@@ -12,7 +12,10 @@
   <a ng-if="project.rendition.demo.code" ng-href="{{project.rendition.demo.code}}" target="_blank">sample</a><span ng-if="project.rendition.demo.code" class="item">code</span>
 </p>
 <p ng-if="project.rendition.demo" class="tags" style="text-transform:lowercase;">( new window )</p>
-<article class="subsection">
+
+<!-- ng-show="project.slideshow.animate" may need to create a show -->
+
+<article class="subsection" >
   <header class="section-header">
     <h3 class="headline">A peek behind the curtain</h3>
     <p class="divider-line blue-green"><span></span><p/>
